--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
         <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex" id="social">
             <li class="nav-item"><a class="nav-link btn btn-primary" href="https://forms.gle/CuMEJ4NoQzqoamnB9" id="cta-add-your-name"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a></li>
-            <li class="nav-item"><a class="nav-link social-icon icon-twitter" href="https://twitter.com/PHPledge"><span class="fab fa-twitter" aria-hidden="true"></span><span class="sr-only">@PHPledge on Twitter, opens in a new window</span></a></li>
+            <li class="nav-item"><a class="nav-link social-icon icon-twitter" href="https://twitter.com/PHPledge"><span class="fab fa-twitter" aria-hidden="true"></span><span class="sr-only">@PHPledge on Twitter</span></a></li>
+            <li class="nav-item"><a class="nav-link social-icon" href="https://mastodon.social/@PHPledge"><span class="fa-brands fa-mastodon" aria-hidden="true"></span><span class="sr-only">@PHPledge on Mastodon</span></a></li>
             <li class="nav-item"><a class="nav-link social-icon icon-envelope" href="mailto:phpledge@googlegroups.com"><span class="fa-solid fa-envelope" aria-hidden="true"></span><span class="sr-only">Email phpledge@googlegroups.com</span></a></li>
         </ul>
     </header>
@@ -178,7 +179,7 @@
                 <p id="footer-links">
                     <a href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
                     <a class="social-icon icon-twitter" href="https://twitter.com/PHPledge">Find @PHPledge on Twitter <span class="fab fa-twitter" aria-hidden="true"></span></a>
-                    <a class="social-icon icon-twitter" href="https://twitter.com/search?q=%23PHPledge%20OR%20%40PHPledge&src=typed_query">Search #PHPledge on Twitter <span class="fa-solid fa-magnifying-glass" aria-hidden="true"></span></a>
+                    <a class="social-icon" href="https://mastodon.social/@phpledge" rel="me">Find @PHPledge on Mastodon <span class="fa-brands fa-mastodon" aria-hidden="true"></span></a></li>
                     <a class="social-icon icon-envelope" href="mailto:phpledge@googlegroups.com">Email <span class="fa-solid fa-envelope" aria-hidden="true"></span><span class="sr-only">Email phpledge@googlegroups.com</span></a>
                 </p>
 
