--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
             <li><a href="https://www.covidpledge.co.nz">Dr Stuart Ekdahl</a>, project lead at www.covidpledge.co.nz</li>
             <li>Ellen Doornbos, CPWA, Accessibility Consultant</li>
             <li><a href="https://linktr.ee/jritten">Jenna Ritten</a>, Lead Architect & Chief Developer Advocate, InnerSource@IBM & Developer Advocacy</li>
+            <li>Irit Katriel, Software Engineer</li>
+            <li><a href="https://adrian.geek.nz">Adrian Cochrane</a>, Software Developer</li>
         </ul>
 
     </main>
@@ -184,7 +186,7 @@
                 </p>
 
                 <p>
-                    Last updated 2022-10-26. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2022-10-28. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
