today's haul so far \o/

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <a href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
 
         <ul class="list-unstyled">
-            <li><a href="https://twitter.com/joshsimmons">Joshua R. Simmons</a>, Foundations Advocate, former Chair of Open Source Initiative</li>
+            <li><a href="https://josh.tel/@josh">Joshua R. Simmons</a>, Foundations Advocate, former Chair of Open Source Initiative</li>
             <li><a href="https://opensourcestories.org/">Amanda Casari</a>, Co-founder of Open Source Stories</li>
             <li><a href="https://twitter.com/chrisjrn">Christopher Neugebauer</a></li>
             <li><a href="https://twitter.com/ParisInBmore">Paris Pittman</a></li>
@@ -172,6 +172,11 @@
             <li><a href="https://linktr.ee/jritten">Jenna Ritten</a>, Lead Architect & Chief Developer Advocate, InnerSource@IBM & Developer Advocacy</li>
             <li>Irit Katriel, Software Engineer</li>
             <li><a href="https://adrian.geek.nz">Adrian Cochrane</a>, Software Developer</li>
+            <li><a href="https://area51.social/@peter">Peter Mount</a>, DevOps Developer, Online Gaming</li>
+            <li>Swan Sodja</li>
+            <li>Maria Romera Jolliff, Student of Public Health</li>
+            <li><a href="https://hirozed.com">James Reevior</a>, Lead Developer</li>
+            <li><a href="https://chaos.social/@onepict">Esther Payne</a>, Community Manager and Privacy Advocate at the Librecast Project</li>
         </ul>
 
     </main>
@@ -186,7 +191,7 @@
                 </p>
 
                 <p>
-                    Last updated 2022-10-28. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2022-10-29. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
