update social and latest signatories

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex" id="social">
             <li class="nav-item"><a class="nav-link btn btn-primary" href="https://forms.gle/CuMEJ4NoQzqoamnB9" id="cta-add-your-name"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a></li>
             <li class="nav-item"><a class="nav-link social-icon icon-twitter" href="https://twitter.com/PHPledge"><span class="fab fa-twitter" aria-hidden="true"></span><span class="sr-only">@PHPledge on Twitter</span></a></li>
-            <li class="nav-item"><a class="nav-link social-icon" href="https://mastodon.social/@PHPledge"><span class="fa-brands fa-mastodon" aria-hidden="true"></span><span class="sr-only">@PHPledge on Mastodon</span></a></li>
+            <li class="nav-item"><a class="nav-link social-icon" href="https://floss.social/@PHPledge"><span class="fa-brands fa-mastodon" aria-hidden="true"></span><span class="sr-only">@PHPledge on Mastodon</span></a></li>
             <li class="nav-item"><a class="nav-link social-icon icon-envelope" href="mailto:phpledge@googlegroups.com"><span class="fa-solid fa-envelope" aria-hidden="true"></span><span class="sr-only">Email phpledge@googlegroups.com</span></a></li>
         </ul>
     </header>
@@ -177,6 +177,17 @@
             <li>Maria Romera Jolliff, Student of Public Health</li>
             <li><a href="https://hirozed.com">James Reevior</a>, Lead Developer</li>
             <li><a href="https://chaos.social/@onepict">Esther Payne</a>, Community Manager and Privacy Advocate at the Librecast Project</li>
+            <li>Dr AL JONES, Psychologist</li>
+            <li>Noah Berman, Lead Security Engineer / Covid Action activist</li>
+            <li>Chris Spence, Retail Worker and Councillor</li>
+            <li><a href="https://librecast.net/">Brett Sheffield</a>, Founder, Librecast Project</li>
+            <li><a href="https://twitter.com/schalkneethling">Schalk Neethling</a>, Mechanical Ink - Founder</li>
+            <li><a href="https://toni.codes">Toni Rheker</a>, Software crafter, former SoCraTes organiser</li>
+            <li><a href="https://plainschwarz.com">Paul Berschick</a>, Project Manager at Plain Schwarz UG, co-organizer of Berlin Buzzwords & FOSS Backstage</li>
+            <li>Adina Wagner, Research Software Engineer</li>
+            <li>Matt Beland, Consultant, Speaker, Art Instructor</li>
+            <li>John Duksta, Security Engineer</li>
+            <li>Jakob Haufe, Debian Developer, Sysadmin, Freelancer</li>
         </ul>
 
     </main>
@@ -186,12 +197,12 @@
                 <p id="footer-links">
                     <a href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
                     <a class="social-icon icon-twitter" href="https://twitter.com/PHPledge">Find @PHPledge on Twitter <span class="fab fa-twitter" aria-hidden="true"></span></a>
-                    <a class="social-icon" href="https://mastodon.social/@phpledge" rel="me">Find @PHPledge on Mastodon <span class="fa-brands fa-mastodon" aria-hidden="true"></span></a></li>
+                    <a class="social-icon" href="https://floss.social/@phpledge" rel="me">Find @PHPledge on Mastodon <span class="fa-brands fa-mastodon" aria-hidden="true"></span></a></li>
                     <a class="social-icon icon-envelope" href="mailto:phpledge@googlegroups.com">Email <span class="fa-solid fa-envelope" aria-hidden="true"></span><span class="sr-only">Email phpledge@googlegroups.com</span></a>
                 </p>
 
                 <p>
-                    Last updated 2022-10-29. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2022-11-12. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
