updating link as requested

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <li><a href="https://twitter.com/sarasomewhere">Sara Safavi</a>, Developer Experience leader; conference speaker and organizer </li>
             <li><a href="http://www.twitter.com/xomiamoore">Mia Moore</a>, Technical Community Builder/Developer Relations</li>
             <li><a href="https://twitter.com/_phzn">Kevin Lewis</a>, Director, You Got This!</li>
-            <li><a href="https://twitter.com/pieschker">Renee Pieschke</a>, Technical Project Manager, Radiant Earth Foundation</li>
+            <li><a href="https://www.linkedin.com/in/reneepieschke/">Renee Pieschke</a>, Technical Project Manager, Radiant Earth Foundation</li>
             <li><a href="https://twitter.com/jna_sh">Joe Nash</a>, Developer Educator, Twilio</li>
             <li>Benno Rice, Over-Opinionated Engineer (v/rare)</li>
             <li><a href="https://twitter.com/develuxiness">Jan Eckhoff</a>, UX Consultant</li>
