yay more people

--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
             <li>Matt Beland, Consultant, Speaker, Art Instructor</li>
             <li>John Duksta, Security Engineer</li>
             <li>Jakob Haufe, Debian Developer, Sysadmin, Freelancer</li>
+            <li>Kalon Hinds</li>
+            <li><a href="https://freeradical.zone/@steve_zeke">Steven Zekowski</a>, Retired Physician (allergy-immunology)</li>
+            <li><a href="https://mat.tl">Dr. Matt Lee</a>, Miniature Painter and Filmmaker, retired free software apologist</li>
+            <li><a href="https://elplatt.com">Edward L Platt</a>, Researcher, Civic Technologist</li>
         </ul>
 
     </main>
