even more! and ljharb!

--- a/index.html
+++ b/index.html
@@ -192,6 +192,10 @@
             <li><a href="https://freeradical.zone/@steve_zeke">Steven Zekowski</a>, Retired Physician (allergy-immunology)</li>
             <li><a href="https://mat.tl">Dr. Matt Lee</a>, Miniature Painter and Filmmaker, retired free software apologist</li>
             <li><a href="https://elplatt.com">Edward L Platt</a>, Researcher, Civic Technologist</li>
+            <li><a href="https://www.tnl.net">Tristan Louis</a>, Founder, TNL.net</li>
+            <li>Jennifer Angeli</li>
+            <li><a href="https://brashley46.wordpress.com/">Brian Ross Ashley</a>, Common Thread Chorus newsletter editor, political activist</li>
+            <li><a href="https://twitter.com/ljharb">Jordan Harband</a>, Open Source Maintainer</li>
         </ul>
 
     </main>
