--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
             <li>Jennifer Angeli</li>
             <li><a href="https://brashley46.wordpress.com/">Brian Ross Ashley</a>, Common Thread Chorus newsletter editor, political activist</li>
             <li><a href="https://twitter.com/ljharb">Jordan Harband</a>, Open Source Maintainer</li>
+            <li>Jinna Kiisuo, TPgM at Google</li>
         </ul>
 
     </main>
@@ -210,7 +211,7 @@
                 </p>
 
                 <p>
-                    Last updated 2022-11-12. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2022-11-13. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
