revise signatory per request

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <li><a href="https://twitter.com/chrisjrn">Christopher Neugebauer</a></li>
             <li><a href="https://twitter.com/ParisInBmore">Paris Pittman</a></li>
             <li>Jeff Luszcz</li>
-            <li><a href="https://doismellburning.co.uk">Kristian Glass (DoISmellBurning)</a>, PSF Fellow</li>
+            <li><a href="https://doismellburning.co.uk">Kristian Glass</a>, PSF Fellow</li>
             <li><a href="https://twitter.com/garethgreenaway">Gareth J Greenaway</a>, Senior Software Engineer, Salt Project</li>
             <li><a href="https://twitter.com/whitecoatcapxg">Norma Miller</a>, President and CEO of White Coat Captioning</li>
             <li><a href="https://twitter.com/jillrouleau">Jill Rouleau</a>, Principal Software Engineer, Red Hat</li>
