--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 
         <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex" id="social">
             <li class="nav-item"><a class="nav-link btn btn-primary" href="https://forms.gle/CuMEJ4NoQzqoamnB9" id="cta-add-your-name"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a></li>
-            <li class="nav-item"><a class="nav-link social-icon icon-twitter" href="https://twitter.com/PHPledge"><span class="fab fa-twitter" aria-hidden="true"></span><span class="sr-only">@PHPledge on Twitter</span></a></li>
             <li class="nav-item"><a class="nav-link social-icon" href="https://floss.social/@PHPledge"><span class="fa-brands fa-mastodon" aria-hidden="true"></span><span class="sr-only">@PHPledge on Mastodon</span></a></li>
             <li class="nav-item"><a class="nav-link social-icon icon-envelope" href="mailto:phpledge@googlegroups.com"><span class="fa-solid fa-envelope" aria-hidden="true"></span><span class="sr-only">Email phpledge@googlegroups.com</span></a></li>
         </ul>
@@ -197,6 +196,10 @@
             <li><a href="https://brashley46.wordpress.com/">Brian Ross Ashley</a>, Common Thread Chorus newsletter editor, political activist</li>
             <li><a href="https://twitter.com/ljharb">Jordan Harband</a>, Open Source Maintainer</li>
             <li>Jinna Kiisuo, TPgM at Google</li>
+            <li>Erin McKean, Wordnik</li>
+            <li><a href="https://acicommunity.org">April Moreno</a>, Autoimmune Community Institute</li>
+            <li>Jan Beilickd, DevOps Engineer</li>
+            <li><a href="https://ialja.com/">Alja Isakovic</a>, Founder, ResponsibleTech.Work</li>
         </ul>
 
     </main>
@@ -205,13 +208,12 @@
 
                 <p id="footer-links">
                     <a href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
-                    <a class="social-icon icon-twitter" href="https://twitter.com/PHPledge">Find @PHPledge on Twitter <span class="fab fa-twitter" aria-hidden="true"></span></a>
                     <a class="social-icon" href="https://floss.social/@phpledge" rel="me">Find @PHPledge on Mastodon <span class="fa-brands fa-mastodon" aria-hidden="true"></span></a></li>
                     <a class="social-icon icon-envelope" href="mailto:phpledge@googlegroups.com">Email <span class="fa-solid fa-envelope" aria-hidden="true"></span><span class="sr-only">Email phpledge@googlegroups.com</span></a>
                 </p>
 
                 <p>
-                    Last updated 2022-11-13. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2022-12-01. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
