--- a/index.html
+++ b/index.html
@@ -200,6 +200,8 @@
             <li><a href="https://acicommunity.org">April Moreno</a>, Autoimmune Community Institute</li>
             <li>Jan Beilickd, DevOps Engineer</li>
             <li><a href="https://ialja.com/">Alja Isakovic</a>, Founder, ResponsibleTech.Work</li>
+            <li>Devon Kim</li>
+            <li>Jessica Herrera, Hacker</li>
         </ul>
 
     </main>
@@ -213,7 +215,7 @@
                 </p>
 
                 <p>
-                    Last updated 2022-12-01. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2022-12-04. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
