--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@
             <li><a href="https://ialja.com/">Alja Isakovic</a>, Founder, ResponsibleTech.Work</li>
             <li>Devon Kim</li>
             <li>Jessica Herrera, Hacker</li>
+            <li>Marielle Cristobal, Family Physician</li>
+            <li><a href="https://oursaintfrancis.org">Bishop Gregory Godsey</a>, Senior Pastor; Saint Francis Parish and Outreach, Augusta, GA</li>
+            <li>Lorna Gillen, Physician</li>
         </ul>
 
     </main>
@@ -215,7 +218,7 @@
                 </p>
 
                 <p>
-                    Last updated 2022-12-04. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2022-12-05. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
