--- a/index.html
+++ b/index.html
@@ -206,6 +206,9 @@
             <li><a href="https://oursaintfrancis.org">Bishop Gregory Godsey</a>, Senior Pastor; Saint Francis Parish and Outreach, Augusta, GA</li>
             <li>Lorna Gillen, Physician</li>
             <li><a href="https://twitter.com/glunardi">Guy Lunardi</a>, VP Business Development @ Collabora</li>
+            <li>Gina DacQuisto</li>
+            <li><a href="https://n7.gg">Amethyst Reese</a>, Software Engineer, Developer Tooling</li>
+            <li><a href="https://coaxion.net">Sebastian Dröge</a>, Software developer, GNOME & GStreamer, co-founder of Centricular</li>
         </ul>
 
     </main>
@@ -219,7 +222,7 @@
                 </p>
 
                 <p>
-                    Last updated 2022-12-05. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2022-12-09. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
