--- a/index.html
+++ b/index.html
@@ -206,12 +206,13 @@
             <li><a href="https://oursaintfrancis.org">Bishop Gregory Godsey</a>, Senior Pastor; Saint Francis Parish and Outreach, Augusta, GA</li>
             <li>Lorna Gillen, Physician</li>
             <li><a href="https://twitter.com/glunardi">Guy Lunardi</a>, VP Business Development @ Collabora</li>
+            <li><a href="https://mastodon.social/@augieray">Augie Ray</a>, VP, Analyst, and Keynote Speaker</li>
+            <li><a href="https://www.linkedin.com/in/hemikim/">Hemi Kim</a>, Education/Nonprofit</li>
         </ul>
 
     </main>
 
     <footer class="container-fluid">
-
                 <p id="footer-links">
                     <a href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
                     <a class="social-icon" href="https://floss.social/@phpledge" rel="me">Find @PHPledge on Mastodon <span class="fa-brands fa-mastodon" aria-hidden="true"></span></a></li>
@@ -219,7 +220,7 @@
                 </p>
 
                 <p>
-                    Last updated 2022-12-05. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2022-12-13. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
