add first institutional signatory! OpenInfra Summit Vancouver

--- a/index.html
+++ b/index.html
@@ -100,7 +100,15 @@
 
         <p>If you’d like to be informed about the launch of our Organizer Guide, or participate in the discussions to improve on it, please follow <a href="https://floss.social/@PHPledge">@PHPledge</a> on Mastodon.</p>
 
-        <h2 class="display-4">Signatories</h2>
+        <h2 class="display-4">Institutional Signatories</h2>
+
+        <a href="https://phpledge.com/assets/event_signatory_guide.pdf"><em>Add your event or organization</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
+
+        <div id="logos">
+            <a href="https://openinfra.dev/summit" title="OpenInfra Summit Vancouver 2023"><img src="assets/orgs/OpenInfraSummit.png" alt="OpenInfra Summit Vancouver logo"></a>
+        </div>
+
+        <h2 class="display-4">Individual Signatories</h2>
 
         <a href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
 
