yay another colleague!

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
             <li><a href="https://worldofwonders.substack.com">J Radcliffe</a>, Consulting Scientist, Imaging/Environment/Healthcare (he/him)</li>
             <li><a href="https://www.jrosenbaum.com.au">J. Rosenbaum</a>, Artist and researcher</li>
             <li>Amy Fountain, Associate Prof of Practice, US Higher Ed</li>
+            <li>Chelsie Luis, Support Engineering Lead</li>
         </ul>
 
     </main>
