--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@
             <li><a href="https://coaxion.net">Sebastian Dröge</a>, Software developer, GNOME & GStreamer, co-founder of Centricular</li>
             <li><a href="https://mastodon.social/@augieray">Augie Ray</a>, VP, Analyst, and Keynote Speaker</li>
             <li><a href="https://www.linkedin.com/in/hemikim/">Hemi Kim</a>, Education/Nonprofit</li>
+            <li><a href="https://worldofwonders.substack.com">J Radcliffe</a>, Consulting Scientist, Imaging/Environment/Healthcare (he/him)</li>
+            <li><a href="https://www.jrosenbaum.com.au">J. Rosenbaum</a>, Artist and researcher</li>
         </ul>
 
     </main>
