--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
             <li><a href="https://www.linkedin.com/in/hemikim/">Hemi Kim</a>, Education/Nonprofit</li>
             <li><a href="https://worldofwonders.substack.com">J Radcliffe</a>, Consulting Scientist, Imaging/Environment/Healthcare (he/him)</li>
             <li><a href="https://www.jrosenbaum.com.au">J. Rosenbaum</a>, Artist and researcher</li>
+            <li>Amy Fountain, Associate Prof of Practice, US Higher Ed</li>
         </ul>
 
     </main>
