add more event signatory entrypoints

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                 </ol>
 
                 <a class="btn btn-link" href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
+
+                <a class="btn btn-link" href="https://phpledge.com/assets/event_signatory_guide.pdf"><em>Add your event</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
             </div>
         </div>
 
@@ -229,6 +231,7 @@
     <footer class="container-fluid">
                 <p id="footer-links">
                     <a href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
+                    <a href="https://phpledge.com/assets/event_signatory_guide.pdf"><em>Add your event</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
                     <a class="social-icon" href="https://floss.social/@phpledge" rel="me">Find @PHPledge on Mastodon <span class="fa-brands fa-mastodon" aria-hidden="true"></span></a></li>
                     <a class="social-icon icon-envelope" href="mailto:phpledge@googlegroups.com">Email <span class="fa-solid fa-envelope" aria-hidden="true"></span><span class="sr-only">Email phpledge@googlegroups.com</span></a>
                 </p>
