specify this applies only to in-person events

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="card-body">
                 <p>I am committed to diversity and inclusion, including people with disabilities, chronic illness, and caregivers, therefore I pledge to only participate in or organize events that have robust Health and Safety policies.</p>
 
-                <p>Events must meet these criteria:</p>
+                <p>Events with in-person gatherings must meet these criteria:</p>
 
                 <ol>
                     <li>The event has a Health and Safety policy, and if the policy changes it is only strengthened – never weakened – between the event’s announcement and the event itself.</li>
