--- a/index.html
+++ b/index.html
@@ -225,6 +225,10 @@
             <li><a href="https://www.jrosenbaum.com.au">J. Rosenbaum</a>, Artist and researcher</li>
             <li>Amy Fountain, Associate Prof of Practice, US Higher Ed</li>
             <li>Chelsie Luis, Support Engineering Lead</li>
+            <li><a href="https://superpalazzo.com">Marcy Freedman</a>, Artist, Art Consultant</li>
+            <li>Steve Huff, Software Engineer</li>
+            <li>Susan Kirks, Nonprofit Conservation Leader</li>
+            <li>Lilly Ryan, Security Specialist</li>
         </ul>
 
     </main>
