--- a/index.html
+++ b/index.html
@@ -229,6 +229,13 @@
             <li>Steve Huff, Software Engineer</li>
             <li>Susan Kirks, Nonprofit Conservation Leader</li>
             <li>Lilly Ryan, Security Specialist</li>
+            <li>Christine Zanoni, Director, Curriculum & Instruction</li>
+            <li>Gordon McLeod, Learning & Innovation Officer</li>
+            <li><a href="https://www.papaya.si">Vesna Drofenik</a>, Marketer</li>
+            <li>Joselyn Harris Ph.D RN, PRESIDENT\CEO FOUNDATION</li>	
+            <li>Sandy Murray, MD</li>
+            <li>Janet Lunde</li>
+            <li><a href="https://alecthegeek.tech/">Alec Clews</a>, Developer Relations Advocate and public speaker</li>
         </ul>
 
     </main>
@@ -242,7 +249,7 @@
                 </p>
 
                 <p>
-                    Last updated 2022-12-16. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2022-12-29. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
