--- a/index.html
+++ b/index.html
@@ -236,6 +236,8 @@
             <li>Sandy Murray, MD</li>
             <li>Janet Lunde</li>
             <li><a href="https://alecthegeek.tech/">Alec Clews</a>, Developer Relations Advocate and public speaker</li>
+            <li><a href="https://federate.social/@jik">Jonathan Kamens</a>, CISO</li>
+            <li>Robert Hunchberger, Nurse</li>
         </ul>
 
     </main>
@@ -249,7 +251,7 @@
                 </p>
 
                 <p>
-                    Last updated 2022-12-29. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-01-04. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
