--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
             <li><a href="https://alecthegeek.tech/">Alec Clews</a>, Developer Relations Advocate and public speaker</li>
             <li><a href="https://federate.social/@jik">Jonathan Kamens</a>, CISO</li>
             <li>Robert Hunchberger, Nurse</li>
+            <li><a href="https://agaric.coop/">Benjamin Melançon</a>, worker-owner, Agaric Technology Collective</li>
         </ul>
 
     </main>
@@ -251,7 +252,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-01-04. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-01-07. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
