yay new signatories

--- a/index.html
+++ b/index.html
@@ -239,6 +239,9 @@
             <li><a href="https://federate.social/@jik">Jonathan Kamens</a>, CISO</li>
             <li>Robert Hunchberger, Nurse</li>
             <li><a href="https://agaric.coop/">Benjamin Melançon</a>, worker-owner, Agaric Technology Collective</li>
+            <li><a href="https://www.valueflo.ws/">Bob Haugen</a>, Valueflows developer</li>
+            <li><a href="https://www.jackscott.id.au">Jack Scott</a>, IT Consultant</li>
+            <li>Anna Ravenscroft</li>
         </ul>
 
     </main>
@@ -252,7 +255,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-01-07. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-01-16. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
