--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
             <li><a href="https://www.valueflo.ws/">Bob Haugen</a>, Valueflows developer</li>
             <li><a href="https://www.jackscott.id.au">Jack Scott</a>, IT Consultant</li>
             <li>Anna Ravenscroft</li>
+            <li>Arin Basu, Professor</li>
         </ul>
 
     </main>
@@ -255,7 +256,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-01-16. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-01-17. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
