--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
             <li><a href="https://www.jackscott.id.au">Jack Scott</a>, IT Consultant</li>
             <li>Anna Ravenscroft</li>
             <li>Arin Basu, Professor</li>
+            <li><a href="https://third-bit.com/">Greg Wilson</a>, Software Engineering Manager</li>
         </ul>
 
     </main>
@@ -256,7 +257,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-01-17. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-01-20. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
