--- a/index.html
+++ b/index.html
@@ -244,6 +244,8 @@
             <li>Anna Ravenscroft</li>
             <li>Arin Basu, Professor</li>
             <li><a href="https://third-bit.com/">Greg Wilson</a>, Software Engineering Manager</li>
+            <li><a href="https://cloudisland.nz/@ewenmcneill">Ewen McNeill</a>, IT Consultant</li>
+            <li>Chris Prather</li>
         </ul>
 
     </main>
@@ -257,7 +259,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-01-20. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-01-23. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
