--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@
             <li><a href="https://third-bit.com/">Greg Wilson</a>, Software Engineering Manager</li>
             <li><a href="https://cloudisland.nz/@ewenmcneill">Ewen McNeill</a>, IT Consultant</li>
             <li>Chris Prather</li>
+            <li><a href="https://orcid.org/0000-0001-5397-2303">Kate Nyham</a>, Librarian; co-founder of Community Access to Ventilation Information</li>
+            <li><a href="https://au.linkedin.com/in/wilbrownau">Wil Brown</a>, WordPress Australia community advocate</li>
         </ul>
 
     </main>
@@ -259,7 +261,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-01-23. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-01-24. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
