new signatories and fixing a typo

--- a/index.html
+++ b/index.html
@@ -246,8 +246,11 @@
             <li><a href="https://third-bit.com/">Greg Wilson</a>, Software Engineering Manager</li>
             <li><a href="https://cloudisland.nz/@ewenmcneill">Ewen McNeill</a>, IT Consultant</li>
             <li>Chris Prather</li>
-            <li><a href="https://orcid.org/0000-0001-5397-2303">Kate Nyham</a>, Librarian; co-founder of Community Access to Ventilation Information</li>
+            <li><a href="https://orcid.org/0000-0001-5397-2303">Kate Nyhan</a>, Librarian; co-founder of Community Access to Ventilation Information</li>
             <li><a href="https://au.linkedin.com/in/wilbrownau">Wil Brown</a>, WordPress Australia community advocate</li>
+            <li>Eva Chanda, Medical Writer</li>
+            <li>Wen Kokke, Research Associate, University of Strathclyde</li>
+            <li><a href="https://www.theresnotime.co.uk">Sammy Tarling</a>, Software Engineer, Wikimedia Foundation</li>
         </ul>
 
     </main>
@@ -261,7 +264,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-01-24. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-01-27. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
