update not enforced grade, it doesn't necessarily represent best efforts, just efforts

--- a/event_badging.html
+++ b/event_badging.html
@@ -45,7 +45,7 @@
         
         <p>A <strong>“Robust”</strong> grade indicates that the event’s policies represent good practice as understood at the time this standard was written, and will be enforced.</p>
 
-        <p>A <strong>“Not Enforced”</strong> grade indicates that best efforts are being made by the organizers, but there are factors that may increase risk for some attendees.</p>
+        <p>A <strong>“Not Enforced”</strong> grade indicates that efforts are being made by the organizers, but there are factors that may increase risk for some attendees.</p>
 
         <p>A <strong>“No Policy”</strong> grade indicates that meaningful policies have not been implemented.</p>
 
